<resources>
    <string name="app_name">KeepNotes</string>
    <string name="update">Update Note</string>
    <string name="savenote">Save Note</string>
    <string name="SignUp">Sign Up</string>
    <string name="hintUserName">UserName</string>
    <string name="labelPassword">Password</string>
    <string name="LabelName">Full Name</string>
    <string name="labelEmail">Email</string>
    <string name="SignIn">Sign In</string>
    <string name="error_massage">Invalid Email Address</string>
    <string name="logout">Logout</string>
    <string name="title">Title</string>
    <string name="notes">Notes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logoutprompt">Do you want to Logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="userid">UserId</string>
    <string name="userpass">Password</string>
</resources>